// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: SearchInput ui with icon 1`] = `
<InputGroup
  className=""
  tag="div"
>
  <InputGroupAddon
    addonType="prepend"
    tag="div"
  >
    <Icon
      icon="search"
    />
  </InputGroupAddon>
  <Input
    className=""
    defaultValue=""
    innerRef={
      Object {
        "current": null,
      }
    }
    onChange={[Function]}
    onKeyUp={[Function]}
    placeholder="Search..."
    type="text"
  />
</InputGroup>
`;

exports[`Component: SearchInput ui with icon when undefined 1`] = `
<InputGroup
  className=""
  tag="div"
>
  <InputGroupAddon
    addonType="prepend"
    tag="div"
  >
    <Icon
      icon="search"
    />
  </InputGroupAddon>
  <Input
    className=""
    defaultValue=""
    innerRef={
      Object {
        "current": null,
      }
    }
    onChange={[Function]}
    onKeyUp={[Function]}
    placeholder="Search..."
    type="text"
  />
</InputGroup>
`;

exports[`Component: SearchInput ui with label 1`] = `
<FormGroup
  tag="div"
>
  <Label
    for="search"
    tag="label"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    Search
  </Label>
  <Input
    className=""
    defaultValue=""
    id="search"
    innerRef={
      Object {
        "current": null,
      }
    }
    label="Search"
    onChange={[Function]}
    onKeyUp={[Function]}
    placeholder="Search..."
    type="text"
  />
</FormGroup>
`;

exports[`Component: SearchInput ui without icon 1`] = `
<Input
  className=""
  defaultValue=""
  innerRef={
    Object {
      "current": null,
    }
  }
  onChange={[Function]}
  onKeyUp={[Function]}
  placeholder="Search..."
  type="text"
/>
`;
